--- a/index.html
+++ b/index.html
@@ -127,7 +127,36 @@
                     </a>
                   </li>
                 </ol>
-              </li>          
+              </li>  
+              <li>
+                <a href="#Target-7">
+                  <span class="title"><h5>Target 7</h5></span>
+                </a>
+              </li>   
+                  <li>
+                <a href="#Target-8">
+                  <span class="title"><h5>Target 8</h5></span>
+                </a>
+                <ol role="list">
+                  <li>
+                    <a href="#Target-8-Point1">
+                      <span class="title"><h6><Point1 here></h6></span>
+                    </a>
+                  </li>
+                </ol>
+              </li>   
+              <li>
+                <a href="#Target-9">
+                  <span class="title"><h5>Target 9</h5></span>
+                </a>
+                <ol role="list">
+                  <li>
+                    <a href="#Target-9-Point1">
+                      <span class="title"><h6><point 1 here></h6></span>
+                    </a>
+                  </li>
+                </ol>
+              </li>   
              
             </ol>
      </ul>
@@ -142,11 +171,14 @@
   <center>
     <h1>Western Australian Alliance to End Homelessness Outcomes Measurement Framework</h1>
     <br>
-    <h2>Dashboard 2022</h2>
+    <h2>Version 4.0</h2>
+    <h2><i>Dashboard 2022</i></h2>
   </center>
     <div class="spacer"></div>
           <div class="clr"></div>
-  <p>This report presents the 2022 update to the Western Australian Alliance to End Homelessness Outcomes Measurement Framework: Dashboard (<i>the Dashboard</i>), which was first released in August 2019, and updated in June 2022.  The Dashboard is an evolving, accessible, and visual platform designed to present and report on outcomes relevant to the key targets of the Western Australian Alliance to End Homelessness (WAAEH). The Dashboard aims to answer the following question: Are we are ‘on track’ to end homelessness in Western Australia?</p>
+  <p>The Western Australian Alliance to End Homelessness presents the 2022 update to the Western Australian Alliance to End Homelessness Outcomes Measurement Framework: Dashboard (<i>the Dashboard</i>), which was first released in August 2019, and updated in June 2022.  The Dashboard is an evolving, accessible, and visual platform designed to present and report on outcomes relevant to the key targets of the Western Australian Alliance to End Homelessness (WAAEH). The Dashboard aims to answer the following question: Are we are ‘on track’ to end homelessness in Western Australia?
+  <br>
+  The Western Australian Alliance to End Homelessness is funded by the Sisters of St John of God Ministeries Inc.</p>
   <br><br>
             <div id="Background">
               <h2>Background</h2>
@@ -310,6 +342,21 @@ Additionally, SHSC records include data on the number of nights clients spend in
               <h3>Addressing the needs of those experiencing homelessness</h3>
               <br>
 <div class='tableauPlaceholder' id='viz1657401799869' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;Target6&#47;SHSclientsleavingsupportperiodswithneedsmet&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Target6&#47;SHSclientsleavingsupportperiodswithneedsmet' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;Target6&#47;SHSclientsleavingsupportperiodswithneedsmet&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1657401799869');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='800px';vizElement.style.height='527px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='800px';vizElement.style.height='527px';} else { vizElement.style.width='100%';vizElement.style.height='727px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+              <br><br>
+            </div> 
+  
+            <div id="Target-7">
+              <h2>Target 7</h2>
+              <br><br>
+            </div> 
+  
+      <div id="Target-8">
+              <h2>Target 8</h2>
+              <br><br>
+            </div> 
+  
+      <div id="Target-8">
+              <h2>Target 8</h2>
               <br><br>
             </div> 
   <div class='footer'>
