--- a/index.html
+++ b/index.html
@@ -255,6 +255,11 @@
                   <td><p>8</p></td>
                   <td><p>31</p></td>
                 </tr>
+                <tr>
+                  <td span="5">
+                    <p><b>Source</b>: Specialist Homelessness Services Collection (AIHW, 2022). Specialist Homelessness Services Annual Report (cat no. HOU 322). https://www.aihw.gov.au/reports/homelessness-services/specialist-homelessness-services-annual-report/contents/summary.</p>
+                  </td>
+                </tr>
               </table>
                    
               <br><br><br>
@@ -392,7 +397,7 @@ Additionally, SHSC records include data on the number of nights clients spend in
               <br><br>
             </div> 
   <div class='footer'>
-        <img src="csi-uwa logo.png" width="400" height="90" align="right">
+        <img src="csi-uwa logo.png" width="380" height="90" align="right">
   </div>
 
 
