--- a/index.html
+++ b/index.html
@@ -229,34 +229,38 @@
               <p>The rates of access to SHS reflect the nature of the service system, including the availability and accessibility of services and the types of supports provided. The SHS data indicates that, relative to national rates, Western Australians accessing SHS do so for much shorter support periods and are accommodated for far fewer nights. In 2019-20, the median length of support received was 22 days in Western Australia and 51 days nationally.</p>
               <br>
               <table>
+                <thead>
+                  <tr>
+                    <td></td>
+                    <td colspan="2"><p>2019/20</p></td>
+                   <td colspan="2"><p>2020/21</p></td>
+                  </tr>
+                  <tr>
+                   <td><p>Support</p></td>
+                   <td><p>Western Australia</p></td>
+                   <td><p>Australia</p></td>
+                   <td><p>Western Australia</p></td>
+                    <td><p>Australia</p></td>
+                  </tr>
+                 </thead>
+                <tbody>
+                  <tr>
+                    <td><p>Median length of support (days)</p></td>
+                    <td><p>16</p></td>
+                    <td><p>43</p></td>
+                    <td><p>22</p></td>
+                    <td><p>51</p></td>
+                  </tr>
+                  <tr>
+                    <td><p>Median length of accommodation (nights)</p></td>
+                    <td><p>8</p></td>
+                    <td><p>28</p></td>
+                    <td><p>8</p></td>
+                    <td><p>31</p></td>
+                  </tr>
+                </tbody>
                 <tr>
-                  <td></td>
-                  <td span="2"><p>2019/20</p></td>
-                  <td span="2"><p>2020/21</p></td>
-                </tr>
-                <tr>
-                  <td><p>Support</p></td>
-                  <td><p>Western Australia</p></td>
-                  <td><p>Australia</p></td>
-                  <td><p>Western Australia</p></td>
-                  <td><p>Australia</p></td>
-                </tr>
-                <tr>
-                  <td><p>Median length of support (days)</p></td>
-                  <td><p>16</p></td>
-                  <td><p>43</p></td>
-                  <td><p>22</p></td>
-                  <td><p>51</p></td>
-                </tr>
-                   <tr>
-                  <td><p>Median length of accommodation (nights)</p></td>
-                  <td><p>8</p></td>
-                  <td><p>28</p></td>
-                  <td><p>8</p></td>
-                  <td><p>31</p></td>
-                </tr>
-                <tr>
-                  <td span="5">
+                  <td colspan="5">
                     <p><b>Source</b>: Specialist Homelessness Services Collection (AIHW, 2022). Specialist Homelessness Services Annual Report (cat no. HOU 322). https://www.aihw.gov.au/reports/homelessness-services/specialist-homelessness-services-annual-report/contents/summary.</p>
                   </td>
                 </tr>
