--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                     </tr>
                    <tr>
                      <td>
-                       <p><b>Source</b>: WAAEH Strategy to End Homelessness (2018)</p>
+                       <p><font size="8"<b>Source</b>: WAAEH Strategy to End Homelessness (2018)</font></p>
                      </td>
                    </tr>
                  </tbody>
@@ -232,8 +232,8 @@
                 <thead>
                   <tr>
                     <td></td>
-                    <td colspan="2"><p>2019/20</p></td>
-                   <td colspan="2"><p>2020/21</p></td>
+                    <td colspan="2"><center><p>2019/20</p></center></td>
+                    <td colspan="2"><center><p>2020/21</p></center></td>
                   </tr>
                   <tr>
                    <td><p>Support</p></td>
@@ -261,7 +261,7 @@
                 </tbody>
                 <tr>
                   <td colspan="5">
-                    <p><b>Source</b>: Specialist Homelessness Services Collection (AIHW, 2022). Specialist Homelessness Services Annual Report (cat no. HOU 322). https://www.aihw.gov.au/reports/homelessness-services/specialist-homelessness-services-annual-report/contents/summary.</p>
+                    <p><font size="8"><b>Source</b>: Specialist Homelessness Services Collection (AIHW, 2022). Specialist Homelessness Services Annual Report (cat no. HOU 322). https://www.aihw.gov.au/reports/homelessness-services/specialist-homelessness-services-annual-report/contents/summary.</font></p>
                   </td>
                 </tr>
               </table>
