--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                     </tr>
                    <tr>
                      <td>
-                       <p><font size="8"<b>Source</b>: WAAEH Strategy to End Homelessness (2018)</font></p>
+                       <p><font size="8px"><b>Source</b>: WAAEH Strategy to End Homelessness (2018)</font></p>
                      </td>
                    </tr>
                  </tbody>
@@ -262,7 +262,7 @@
                 </tbody>
                 <tr>
                   <td colspan="5">
-                    <p><font size="8"><b>Source</b>: Specialist Homelessness Services Collection (AIHW, 2022). Specialist Homelessness Services Annual Report (cat no. HOU 322). https://www.aihw.gov.au/reports/homelessness-services/specialist-homelessness-services-annual-report/contents/summary.</font></p>
+                    <p><font size="8px"><b>Source</b>: Specialist Homelessness Services Collection (AIHW, 2022). Specialist Homelessness Services Annual Report (cat no. HOU 322). https://www.aihw.gov.au/reports/homelessness-services/specialist-homelessness-services-annual-report/contents/summary.</font></p>
                   </td>
                 </tr>
               </table>
