--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                       </td>
                     </tr>
                    <tr>
-                     <td>
+                     <td colspan="2">
                        <p><font size="8px"><b>Source</b>: WAAEH Strategy to End Homelessness (2018)</font></p>
                      </td>
                    </tr>
