--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                     </tr>
                    <tr>
                      <td colspan="2">
-                       <p><font size="8px"><b>Source</b>: WAAEH Strategy to End Homelessness (2018)</font></p>
+                       <p><b>Source</b>: WAAEH Strategy to End Homelessness (2018)</p>
                      </td>
                    </tr>
                  </tbody>
@@ -260,11 +260,13 @@
                     <td><p>31</p></td>
                   </tr>
                 </tbody>
-                <tr>
+                <tfoot>
+                 <tr>
                   <td colspan="5">
-                    <p><font size="8px"><b>Source</b>: Specialist Homelessness Services Collection (AIHW, 2022). Specialist Homelessness Services Annual Report (cat no. HOU 322). https://www.aihw.gov.au/reports/homelessness-services/specialist-homelessness-services-annual-report/contents/summary.</font></p>
+                    <p><b>Source</b>: Specialist Homelessness Services Collection (AIHW, 2022). Specialist Homelessness Services Annual Report (cat no. HOU 322). https://www.aihw.gov.au/reports/homelessness-services/specialist-homelessness-services-annual-report/contents/summary.</p>
                   </td>
-                </tr>
+                 </tr>
+                </tfoot>
               </table>
               </center>
                    
