--- a/index.html
+++ b/index.html
@@ -210,12 +210,14 @@
                         <b>Target 9</b>: Measurement, accountability and governance mechanisms that are robust, transparent and open to external review will be operating, providing an on-going means for assessing progress in meeting the goals of Ending Homelessness in Western Australia in 10 years.<br>
                       </td>
                     </tr>
+                  </tbody>
+                  <tfoot>   
                    <tr>
                      <td colspan="2">
                        <p><b>Source</b>: WAAEH Strategy to End Homelessness (2018)</p>
                      </td>
                    </tr>
-                 </tbody>
+                  </tfoot>
                 </table>
               </center>
             </div>
