--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                   <tfoot>   
                    <tr>
                      <td colspan="2">
-                       <p><b>Source</b>: WAAEH Strategy to End Homelessness (2018)</p>
+                       <p2><b>Source</b>: WAAEH Strategy to End Homelessness (2018)</p2>
                      </td>
                    </tr>
                   </tfoot>
@@ -265,7 +265,7 @@
                 <tfoot>
                  <tr>
                   <td colspan="5">
-                    <p><b>Source</b>: Specialist Homelessness Services Collection (AIHW, 2022). Specialist Homelessness Services Annual Report (cat no. HOU 322). https://www.aihw.gov.au/reports/homelessness-services/specialist-homelessness-services-annual-report/contents/summary.</p>
+                    <p2><b>Source</b>: Specialist Homelessness Services Collection (AIHW, 2022). Specialist Homelessness Services Annual Report (cat no. HOU 322). https://www.aihw.gov.au/reports/homelessness-services/specialist-homelessness-services-annual-report/contents/summary.</p2>
                   </td>
                  </tr>
                 </tfoot>
