--- a/index.html
+++ b/index.html
@@ -232,6 +232,11 @@
               <br>
               <center>
               <table>
+                <tr>
+                  <td colspan="5">
+                    <p>Table. Median length of support, days in support periods and nights accommodated, 2019/20,  and 2020/21, Western Australia and Australia</p>
+                  </td>
+                </tr>
                 <thead>
                   <tr>
                     <td></td>
