--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
               <br>
               <center>
               <table>
-               <caption align="left"><p>Table. Median length of support, days in support periods and nights accommodated, 2019/20,  and 2020/21, Western Australia and Australia</p></caption>
+               <caption style="text-align:right"><p>Table. Median length of support, days in support periods and nights accommodated, 2019/20,  and 2020/21, Western Australia and Australia</p></caption>
                 <thead>
                   <tr>
                     <td></td>
