--- a/index.html
+++ b/index.html
@@ -307,6 +307,101 @@ Additionally, SHSC records include data on the number of nights clients spend in
               <blockquote class="blockquote">
                   <h4><i>The underlying causes that result in people becoming homeless have been met head-on, resulting in a reduction by more than half in the inflow of people and families into homelessness in any one year</i></h4>
               </blockquote>
+              <br><br>
+              <p>The causes of homelessness are complex, encompassing a broad range of individual and structural determinants, including housing availability and affordability, economic and employment opportunities (or lack thereof), physical and mental health outcomes, domestic and family violence, and social and community connections.</p>
+              <br>
+              <center>
+              <table>
+               <caption style="text-align:left"><p>Table. Drivers of homelessness in Western Australia</p></caption>
+                <thead>
+                  <tr>
+                    <td><p>Drivers</p></td>
+                    <td><p>Indicators/p></td>
+                    <td><p>Most current values</p></td>
+                    <td><p>Trend over time</p></td>
+                  </tr>
+                 </thead>
+                <tbody>
+                  <tr>
+                    <td rowspan="6"><p>Median length of support (days)</p></td>
+                    <td><p>Proportion experiencing household stress in Perth (2017 - 2020)<sup>1</sup></p></td>
+                    <td><p>10.7%</p></td>
+                    <td><p>Increasing</p></td>
+                  </tr>
+                  <tr>
+                    <td><p>Proportion of low-income rental households spending more than 30 per cent of their gross income on housing costs (2019-2020)<sup>2</sup></p></td>
+                    <td><p>Perth -36.7%<br>
+                      Rest of state – 26.2%</p></td>
+                    <td><p>Decreasing</p></td>
+                  </tr>
+                  <tr>
+                    <td><p>Proportion of low income households remaining in housing stress from one year to the next  (2017-2020)<sup>1</sup></p></td>
+                    <td><p>Australia – 48.3%</p></td>
+                    <td><p>Increasing</p></td>
+                  </tr>
+                  <tr>
+                    <td><p>Housing affordability (2019-2020)<sup>2</sup></p></td>
+                    <td><p>Owner – 2.9%<br>
+                      Owner with a mortgage – 14.0%<br>
+                      Renter – private landlord – 17.4%<br>
+                      Renter – state of territory housing – 20.9%<br></p></td>
+                    <td><p>Stable</p><br>
+                      <p>Decreasing<br>
+                      Stable<br>
+                      Decreasing</p>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td><p>Rental affordability index (Q2, 2020)<sup>3</sup></p></td>
+                    <td><p>Perth – Extremely unaffordable<br>
+                      Rest of Western Australia – Extremely unaffordable</p></td>
+                    <td>
+                      <p>Decreasing<br>
+                      Decreasing</p>
+                    </td>
+                  </tr>
+                 <tr>
+                   <td rowspan="3"><p>Housing supply</p></td>
+                   <td><p>Number of social housing dwellings (2021)<sup>4</sup></p></td>
+                    <td><p>Indigenous community housing – 2,699<br>
+                      Community housing – 7,997<br>
+                      Public housing - 31,919</p></td>
+                   <td>
+                      <p>Decreasing<br>
+                        Stable<br>
+                        Decreasing</p>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td><p>Number of applicants on waiting list (2021)<sup>4</sup></td>
+                    <td><p>14,619</p>
+                    </td>
+                   <td>
+                     <p>Stable</p><br>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td><p>Waiting time to secure public housing accommodation (2020)<sup>5</sup></td>
+                    <td><p>Average – 94 weeks<br>
+                      Median – 48 weeks</p>
+                    </td>
+                   <td>
+                      <p>Stable<br>
+                        Stable
+                     </p>
+                    </td>
+                  </tr>
+                </tbody>
+                <tfoot>
+                 <tr>
+                  <td colspan="5">
+                    <p2><b>Source</b>: Specialist Homelessness Services Collection (AIHW, 2022). Specialist Homelessness Services Annual Report (cat no. HOU 322). https://www.aihw.gov.au/reports/homelessness-services/specialist-homelessness-services-annual-report/contents/summary.</p2>
+                  </td>
+                 </tr>
+                </tfoot>
+              </table>
+              </center>   
+              
             </div>
     
             <div id="Target-4-Housing-affordability">
