--- a/index.html
+++ b/index.html
@@ -394,8 +394,13 @@ Additionally, SHSC records include data on the number of nights clients spend in
                 </tbody>
                 <tfoot>
                  <tr>
-                  <td colspan="5">
-                    <p2><b>Source</b>: Specialist Homelessness Services Collection (AIHW, 2022). Specialist Homelessness Services Annual Report (cat no. HOU 322). https://www.aihw.gov.au/reports/homelessness-services/specialist-homelessness-services-annual-report/contents/summary.</p2>
+                  <td colspan="4">
+                    <p2>
+                      <sup>1</sup>The Household, Income and Labour Dynamics in Australia (HILDA) Survey: General Release 20, 2022<br>
+                      <sup>2</sup>ABS 4130.0 – Housing Occupancy and Costs, 2019-20<br>
+                      <sup>3</sup>Rental Affordability Index, SGS Economics & Planning.<br>
+                      <sup>4</sup>AIHW Housing assistance in Australia 2021<br>
+                      <sup>5</sup>Government of Western Australia Department of Communities, Housing Authority Annual Report 2019-20</p2>
                   </td>
                  </tr>
                 </tfoot>
