--- a/index.html
+++ b/index.html
@@ -316,14 +316,14 @@ Additionally, SHSC records include data on the number of nights clients spend in
                 <thead>
                   <tr>
                     <td><p>Drivers</p></td>
-                    <td><p>Indicators/p></td>
+                    <td><p>Indicators</p></td>
                     <td><p>Most current values</p></td>
                     <td><p>Trend over time</p></td>
                   </tr>
                  </thead>
                 <tbody>
                   <tr>
-                    <td rowspan="6"><p>Median length of support (days)</p></td>
+                    <td rowspan="6"><p>Housing affordability</p></td>
                     <td><p>Proportion experiencing household stress in Perth (2017 - 2020)<sup>1</sup></p></td>
                     <td><p>10.7%</p></td>
                     <td><p>Increasing</p></td>
@@ -349,6 +349,19 @@ Additionally, SHSC records include data on the number of nights clients spend in
                       <p>Decreasing<br>
                       Stable<br>
                       Decreasing</p>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td><p>Home ownership (2019-2020)<sup>2</sup></p></td>
+                    <td><p>
+                      Owner without a mortgage – 26.6%<br>
+                      Owner with a mortgage – 42.7%<br>
+                      Renter – private landlord – 22.5%<br>
+                      Renter – state of territory housing – 2.8%<br></p></td>
+                    <td><p>Decreasing<br>
+                      <p>Stable<br>
+                      Decreasing<br>
+                      Increasing</p>
                     </td>
                   </tr>
                   <tr>
