--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@ Additionally, SHSC records include data on the number of nights clients spend in
                  </thead>
                 <tbody>
                   <tr>
-                    <td rowspan="6"><p>Housing affordability</p></td>
+                    <td rowspan="13"><p>Housing affordability</p></td>
                     <td><p>Proportion experiencing household stress in Perth (2017 - 2020)<sup>1</sup></p></td>
                     <td><p>10.7%</p></td>
                     <td><p>Increasing</p></td>
@@ -340,50 +340,61 @@ Additionally, SHSC records include data on the number of nights clients spend in
                     <td><p>Increasing</p></td>
                   </tr>
                   <tr>
-                    <td><p>Housing affordability (2019-2020)<sup>2</sup></p></td>
-                    <td><p>Owner – 2.9%<br>
-                      Owner with a mortgage – 14.0%<br>
-                      Renter – private landlord – 17.4%<br>
-                      Renter – state of territory housing – 20.9%<br></p></td>
-                    <td><p>Stable</p><br>
-                      <p>Decreasing<br>
-                      Stable<br>
-                      Decreasing</p>
-                    </td>
+                    <td rowspan="4"><p>Housing affordability (2019-2020)<sup>2</sup></p></td>
+                    <td><p>Owner – 2.9%</p></td>
+                    <td><p>Stable</p></td>
                   </tr>
                   <tr>
-                    <td><p>Home ownership (2019-2020)<sup>2</sup></p></td>
-                    <td><p>
-                      Owner without a mortgage – 26.6%<br>
-                      Owner with a mortgage – 42.7%<br>
-                      Renter – private landlord – 22.5%<br>
-                      Renter – state of territory housing – 2.8%<br></p></td>
-                    <td><p>Decreasing<br>
-                      <p>Stable<br>
-                      Decreasing<br>
-                      Increasing</p>
-                    </td>
+                    <td><p>Owner with a mortgage – 14.0%</p></td>
+                    <td><p>Decreasing</p></td>
                   </tr>
                   <tr>
-                    <td><p>Rental affordability index (Q2, 2020)<sup>3</sup></p></td>
-                    <td><p>Perth – Extremely unaffordable<br>
-                      Rest of Western Australia – Extremely unaffordable</p></td>
-                    <td>
-                      <p>Decreasing<br>
-                      Decreasing</p>
-                    </td>
+                    <td><p>Renter – private landlord – 17.4%</p></td>
+                    <td><p>Stable</p></td>
+                  </tr>
+                  <tr>
+                    <td><p>Renter – state of territory housing – 20.9%</p></td>
+                    <td><p>Decreasing</p></td>
+                  </tr>
+                  <tr>
+                    <td rowspan="4"><p>Home ownership (2019-2020)<sup>2</sup></p></td>
+                    <td><p>Owner without a mortgage – 26.6%</p></td>
+                    <td><p>Decreasing</p></td>
+                  </tr>
+                  <tr>
+                    <td><p>Owner with a mortgage – 42.7%</p></td>
+                    <td><p>Stable</p></td>
+                  </tr>
+                  <tr>
+                    <td><p>Renter – private landlord – 22.5%</p></td>
+                    <td><p>Decreasing</p></td>
+                  </tr>
+                  <tr>
+                    <td><p>Renter – state of territory housing – 2.8%</p></td>
+                    <td><p>Increasing</p></td>
+                  </tr>
+                  <tr>
+                    <td rowspan="2"><p>Rental affordability index (Q2, 2020)<sup>3</sup></p></td>
+                    <td><p>Perth – Extremely unaffordable</p></td>
+                    <td><p>Decreasing</p></td>
+                  </tr>
+                  <tr>
+                    <td><p>Rest of Western Australia – Extremely unaffordable</p></td>
+                    <td><p>Decreasing</p></td>
                   </tr>
                  <tr>
-                   <td rowspan="3"><p>Housing supply</p></td>
-                   <td><p>Number of social housing dwellings (2021)<sup>4</sup></p></td>
-                    <td><p>Indigenous community housing – 2,699<br>
-                      Community housing – 7,997<br>
-                      Public housing - 31,919</p></td>
-                   <td>
-                      <p>Decreasing<br>
-                        Stable<br>
-                        Decreasing</p>
-                    </td>
+                   <td rowspan="6"><p>Housing supply</p></td>
+                   <td rowspan="3"><p>Number of social housing dwellings (2021)<sup>4</sup></p></td>
+                   <td><p>Indigenous community housing – 2,699</p></td>
+                   <td><p>Decreasing</p></td>
+                  </tr>
+                  <tr>
+                    <td><p>Community housing – 7,997</p></td>
+                    <td><p>Stable</p></td>
+                  </tr>
+                  <tr>
+                    <td><p>Public housing - 31,919</p></td>
+                    <td><p>Decreasing</p></td>
                   </tr>
                   <tr>
                     <td><p>Number of applicants on waiting list (2021)<sup>4</sup></td>
@@ -394,16 +405,14 @@ Additionally, SHSC records include data on the number of nights clients spend in
                     </td>
                   </tr>
                   <tr>
-                    <td><p>Waiting time to secure public housing accommodation (2020)<sup>5</sup></td>
-                    <td><p>Average – 94 weeks<br>
-                      Median – 48 weeks</p>
-                    </td>
-                   <td>
-                      <p>Stable<br>
-                        Stable
-                     </p>
-                    </td>
+                    <td rowspan="2"><p>Waiting time to secure public housing accommodation (2020)<sup>5</sup></td>
+                    <td><p>Average – 94 weeks</p></td>
+                    <td><p>Stable</p></td>
                   </tr>
+                  <tr>
+                    <td><p>Median – 48 weeks</p></td>
+                    <td><p>Stable</p></td>
+                  </tr>`
                 </tbody>
                 <tfoot>
                  <tr>
