--- a/index.html
+++ b/index.html
@@ -324,6 +324,8 @@ Additionally, SHSC records include data on the number of nights clients spend in
                 <tbody>
                   <tr>
                     <td rowspan="13"><p>Housing affordability</p></td>
+                </tbody>
+                <tbody class="row-wrapper">
                     <td><p>Proportion experiencing household stress in Perth (2017 - 2020)<sup>1</sup></p></td>
                     <td><p>10.7%</p></td>
                     <td><p>Increasing</p></td>
@@ -382,8 +384,12 @@ Additionally, SHSC records include data on the number of nights clients spend in
                     <td><p>Rest of Western Australia – Extremely unaffordable</p></td>
                     <td><p>Decreasing</p></td>
                   </tr>
+                </tbody>
+                <tbody>
                  <tr>
                    <td rowspan="6"><p>Housing supply</p></td>
+              </tbody>
+              <tbody class="row-wrapper">
                    <td rowspan="3"><p>Number of social housing dwellings (2021)<sup>4</sup></p></td>
                    <td><p>Indigenous community housing – 2,699</p></td>
                    <td><p>Decreasing</p></td>
