--- a/index.html
+++ b/index.html
@@ -170,11 +170,11 @@
 <div id="header">
   <table class="header-table" align="center">
     <tr>
-      <td>
+      <td width="70%">
         <h1>Western Australian Alliance to End Homelessness Outcomes Measurement Framework</h1>
       </td>
-      <td>
-        <img src="waeeh logo with text.png">
+      <td width="30%">
+        <img src="waeeh logo with text.png" width="350" height="150">
       </td>
     </tr>
   </table>
