--- a/index.html
+++ b/index.html
@@ -168,13 +168,13 @@
 <!--END of menu-->
 <!--This is the START of the content-->
 <div id="header">
-  <table class="header-table" align="center">
+  <table class="header-table">
     <tr>
       <td width="70%">
         <h1>Western Australian Alliance to End Homelessness Outcomes Measurement Framework</h1>
       </td>
       <td width="30%">
-        <img src="waeeh logo with text.png" width="350" height="150">
+        <img src="waeeh logo with text.png" width="350" height="200">
       </td>
     </tr>
   </table>
