--- a/index.html
+++ b/index.html
@@ -168,19 +168,19 @@
 <!--END of menu-->
 <!--This is the START of the content-->
 <div id="content">
-  <table class="header-table">
+  <table class="header-table" border="1">
     <tr>
       <td width="70%">
         <h1>Western Australian Alliance to End Homelessness Outcomes Measurement Framework</h1>
+         <br>
+    <h2>Version 4.0</h2>
+    <h2><i>Dashboard 2022</i></h2>
       </td>
       <td width="30%">
         <img src="waeeh logo with text.png" width="350" height="200">
       </td>
     </tr>
   </table>
-    <br>
-    <h2>Version 4.0</h2>
-    <h2><i>Dashboard 2022</i></h2>
     <div class="spacer"></div>
           <div class="clr"></div>
   <p>The Western Australian Alliance to End Homelessness presents the 2022 update to the Western Australian Alliance to End Homelessness Outcomes Measurement Framework: Dashboard (<i>the Dashboard</i>), which was first released in August 2019, and updated in June 2022.  The Dashboard is an evolving, accessible, and visual platform designed to present and report on outcomes relevant to the key targets of the Western Australian Alliance to End Homelessness (WAAEH). The Dashboard aims to answer the following question: Are we are ‘on track’ to end homelessness in Western Australia?
