--- a/index.html
+++ b/index.html
@@ -168,15 +168,15 @@
 <!--END of menu-->
 <!--This is the START of the content-->
 <div id="content">
-  <table class="header-table" border="1">
+  <table class="header-table" style="border:1">
     <tr>
-      <td width="70%">
+      <td style="width:70%; vertical-align:top;">
         <h1>Western Australian Alliance to End Homelessness Outcomes Measurement Framework</h1>
          <br>
-    <h2>Version 4.0</h2>
-    <h2><i>Dashboard 2022</i></h2>
+        <h2>Version 4.0</h2><br>
+        <h2><i>Dashboard 2022</i></h2>
       </td>
-      <td width="30%">
+      <td style="width:30%; vertical-align:top;">
         <img src="waeeh logo with text.png" width="350" height="200">
       </td>
     </tr>
