--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
               <p>The rates of access to SHS reflect the nature of the service system, including the availability and accessibility of services and the types of supports provided. The SHS data indicates that, relative to national rates, Western Australians accessing SHS do so for much shorter support periods and are accommodated for far fewer nights. In 2019-20, the median length of support received was 22 days in Western Australia and 51 days nationally.</p>
               <br>
               <center>
-              <table>
+              <table class="normal-table">
                <caption style="text-align:left"><p>Table. Median length of support, days in support periods and nights accommodated, 2019/20,  and 2020/21, Western Australia and Australia</p></caption>
                 <thead>
                   <tr>
@@ -318,7 +318,7 @@ Additionally, SHSC records include data on the number of nights clients spend in
               <p>The causes of homelessness are complex, encompassing a broad range of individual and structural determinants, including housing availability and affordability, economic and employment opportunities (or lack thereof), physical and mental health outcomes, domestic and family violence, and social and community connections.</p>
               <br>
               <center>
-              <table>
+              <table class="normal-table">
                <caption style="text-align:left"><p>Table. Drivers of homelessness in Western Australia</p></caption>
                 <thead>
                   <tr>
